# conda-auth

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  environment.yml  pixi.toml  pyproject.toml  recipe.yaml  requirements-dev.txt  requirements.dev.txt
.github/ISSUE_TEMPLATE/: 0_bug.yml  1_feature.yml  config.yml  epic.yml
.github/workflows/: docs.yml  tests.yml
conda_auth/: __init__.py  __version__.py  basic_auth.py  cli.py  condarc.py  constants.py  credentials.py  exceptions.py  hooks.py  oauth2.py  oauth2_client.py  options.py  plugin.py  proxy.py  verification.py
conda_auth/cli/: __init__.py  channel.py  config.py  oauth2.py  parser.py  proxy.py  status.py
conda_auth/handlers/: __init__.py  base.py  basic_auth.py  oauth2.py  token.py
conda_auth/storage/: __init__.py  base.py  keyring.py
conda_basic_auth/: __version__.py  main.py
dev/: setup.sh
docs/: conf.py  environment.yml  index.md  robots.txt
docs/dev/: changelog.md  index.md
docs/user/: faq.md  index.md
recipe/: meta.yaml
tests/: conftest.py  requirements.txt  test_basic_auth.py  test_condarc.py  test_config.py  test_credentials.py  test_hooks.py  test_login.py  test_plugin.py  test_proxy.py  test_storage.py  test_verification.py
tests/cli/: test_group.py  test_login.py  test_logout.py  test_proxy.py  test_status.py
tests/handlers/: test_base.py  test_basic_auth.py  test_oauth2.py  test_token.py
tests/integration/: __init__.py  auth_server.py  conftest.py  test_auth_server.py  test_authenticated_channels.py  test_plugin_entrypoint.py
