[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "conda-auth"
dynamic = ["version"]
description = "A conda plugin for handling multiple authentication schemes"
requires-python = ">=3.8"
license = {file = "LICENSE"}
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "License :: OSI Approved :: BSD License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy"
]
dependencies = [
  "click",
  "conda",
  "keyring",
  "requests",
  "ruamel.yaml<0.18",
]

[project.entry-points.conda]
conda-auth = "conda_auth.plugin"

[tool.setuptools.packages]
find = {}

[tool.hatch.version]
source = "vcs"
