[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "conda-auth"
dynamic = ["version"]
description = "A conda plugin for handling multiple authentication schemes"
requires-python = ">=3.10"
license = {file = "LICENSE"}
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "License :: OSI Approved :: BSD License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy"
]
dependencies = [
  "conda>=26.1",
  "keyring",
  "requests",
]

[project.entry-points.conda]
conda-auth = "conda_auth.plugin"

[tool.setuptools.packages]
find = {}

[tool.hatch.version]
source = "vcs"

[tool.ruff]
line-length = 99
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]
ignore = ["E203", "E402", "E501", "E722", "E731"]

[tool.ty.analysis]
allowed-unresolved-imports = ["conda_auth._version"]

[tool.ty.src]
include = ["conda_auth", "tests"]
